changed collection menu name

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li ><a href="#">HOME</a></li>
         <li><a href="#">MEN</a></li>
         <li><a href="#">WOMEN</a></li>
-        <li><a href="#">COLLECTION</a></li>
+        <li><a href="#">COLLECTIONS</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right"> 
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> <input type="box" name="ajay" placeholder="search" class="search"> </a></li>
