--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 </div>
 
 <div class="container text-center" style="margin-top: 80px;">    
-  <h2 style="background-color:skyblue; margin-top: 30px;">Shop By Brands</h2>
+  <h2 style="background-color:skyblue; margin-top: 30px;">Shop By Brand</h2>
   <br>
   <div class="row">
     <div class="col-sm-2">
